--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def number_of_destinations():\n",
+    "    return len(travel_destinations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_destinations() # 6"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def number_of_destinations_univ(x):\n",
+    "    return len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +110,13 @@
        "6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# number_of_destinations() # 6"
+    "number_of_destinations_univ(travel_destinations)"
    ]
   },
   {
@@ -86,11 +128,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "def next_up(x):\n",
+    "    return x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'argentina'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next_up(travel_destinations)"
    ]
   },
   {
@@ -102,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +174,14 @@
        "'argentina'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "# next_up() # 'argentina'"
+    "next_up(list_of_destinations) # 'argentina'"
    ]
   },
   {
@@ -130,11 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "def favorite_destination():\n",
+    "    return 'madagascar'"
    ]
   },
   {
@@ -146,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -155,13 +219,13 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# favorite_destination() # 'madagascar'"
+    "favorite_destination() # 'madagascar'"
    ]
   },
   {
@@ -173,11 +237,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "def add_favorite_destination(x):\n",
+    "    favorite_destinations = []\n",
+    "    favorite_destinations.append(x)\n",
+    "    favorite_destinations.append('madagascar')\n",
+    "    return x, len(favorite_destinations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('madaGASCAR', 2)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_favorite_destination('madaGASCAR')"
    ]
   },
   {
@@ -189,31 +277,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'madagascar'"
+       "6"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# add_favorite_destination()\n",
-    "favorite_destinations[-1] # 'madagascar'"
+    "add_favorite_destination(favorite_destinations)\n",
+    "favorite_destinations[-1]\n",
+    "len(favorite_destinations) # 'madagascar'"
    ]
   },
   {
@@ -225,12 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here"
+    "def capitalized_countries():\n",
+    "    capitalized_countries_capitalized = []\n",
+    "    for country in capitalized_destinations:\n",
+    "        capitalized_countries_capitalized.append(country.capitalize())\n",
+    "    return capitalized_countries_capitalized\n",
+    "        "
    ]
   },
   {
@@ -242,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +338,13 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "capitalized_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
@@ -298,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
